# GVerify

./: LICENSE.txt  README.md
src/: CMakeLists.txt
src/impl/: CMakeLists.txt  GenerateGcps.cpp  GenerateGcps.h  GenerateResults.cpp  GenerateResults.h  ParseInput.cpp  ParseInput.h  ReprojectImages.cpp  ReprojectImages.h  main.cpp
src/impl/ultra/: CMakeLists.txt
src/impl/ultra/algo/inc/: ul_Chips.h  ul_ChipsGen.h  ul_ChipsGenWrapper.h  ul_ConvKernel.h  ul_ConvKernelToImage.h  ul_ConvexHull.h  ul_CorrelationHandler.h  ul_CreateConvKernel.h  ul_Dft.h  ul_DftBase.h  ul_DigitalImageCorrelator.h  ul_EvenChips.h  ul_FixedLocationChips.h  ul_GaussianFilterTransform.h  ul_GaussianPyramidTiePointGenerator.h  ul_GcpHullRejection.h  ul_HarrisChips.h  ul_HarrisCornerTransform.h  ul_HostDft.h  ul_ImageFillNeighbor.h  ul_ImageOverlap.h  ul_Int_TiePointGenerator.h  ul_LeastSquares.h  ul_MapModelToMatrix.h  ul_PaddImage.h  ul_Reproject.h  ul_Resampler.h  ul_SobelChips.h  ul_SobelFilterTransform.h  ul_SubPixelCorrelator.h  ul_TiePointGenerator.h  ul_TiePointGeneratorGcpPyramids.h  ul_TiledGaussianPyramidTiePointGenerator.h  ul_Transform.h  ul_WorldModel.h
src/impl/ultra/algo/src/: CMakeLists.txt
src/impl/ultra/algo/src/chips/: ul_Chips.cpp  ul_ChipsGen.cpp  ul_ChipsGenWrapper.cpp  ul_EvenChips.cpp  ul_FixedLocationChips.cpp  ul_HarrisChips.cpp  ul_SobelChips.cpp
src/impl/ultra/algo/src/convolve/: ul_ConvKernel.cpp  ul_ConvKernelToImage.cpp  ul_CreateConvKernel.cpp
src/impl/ultra/algo/src/correlation/: ul_CorrelationHandler.cpp  ul_DigitalImageCorrelator.cpp  ul_SubPixelCorrelator.cpp
src/impl/ultra/algo/src/frequencyDomain/: ul_Dft2d.cpp  ul_DftBase.cpp  ul_DftBase2d.cpp  ul_HostDft2d.cpp
src/impl/ultra/algo/src/gcp/: ul_GaussianPyramidTiePointGenerator.cpp  ul_GcpHullRejection.cpp  ul_Int_TiePointGenerator.cpp  ul_TiePointGenerator.cpp  ul_TiePointGeneratorGcpPyramids.cpp  ul_TiledGaussianPyramidTiePointGenerator.cpp
src/impl/ultra/algo/src/matrix/: ul_ImageFillNeighbor.cpp  ul_ImageOverlap.cpp  ul_PaddImage.cpp
src/impl/ultra/algo/src/modelling/: ul_ConvexHull.cpp  ul_LeastSquares.cpp  ul_MapModelToMatrix.cpp  ul_WorldModel.cpp
src/impl/ultra/algo/src/resample/: ul_Reproject.cpp  ul_Resampler.cpp
src/impl/ultra/algo/src/transforms/: ul_GaussianFilterTransform.cpp  ul_HarrisCornerTransform.cpp  ul_SobelFilterTransform.cpp  ul_Transform.cpp
src/impl/ultra/data/inc/: ul_2D.h  ul_3D.h  ul_AtomicBool.h  ul_AtomicLong.h  ul_Color.h  ul_Complex.h  ul_Image.h  ul_Int_AtomicType.h  ul_IntegralMatrix.h  ul_KeyValue.h  ul_Line.h  ul_Map.h  ul_Matrix.h  ul_MatrixArray.h  ul_Pair.h  ul_Size.h  ul_SmartVector.h  ul_Square.h  ul_Vector.h
src/impl/ultra/data/src/: CMakeLists.txt  ul_2D.cpp  ul_3D.cpp  ul_AtomicBool.cpp  ul_AtomicLong.cpp  ul_Color.cpp  ul_Complex.cpp  ul_Image.cpp  ul_Int_AtomicType.cpp  ul_IntegralMatrix.cpp  ul_KeyValue.cpp  ul_Line.cpp  ul_Map.cpp  ul_Matrix.cpp  ul_MatrixArray.cpp  ul_Pair.cpp  ul_Size.cpp  ul_SmartVector.cpp  ul_Square.cpp  ul_Vector.cpp
src/impl/ultra/image/inc/: ul_ImageEnums.h  ul_ImageLoader.h  ul_ImageMetadataObjects.h  ul_ImageSaver.h  ul_Int_ImageLoader.h  ul_Int_ImageSaver.h
src/impl/ultra/image/src/: CMakeLists.txt  ul_ImageEnums.cpp  ul_ImageLoader.cpp  ul_ImageMetadataObjects.cpp  ul_ImageSaver.cpp
src/impl/ultra/image/src/GDAL/: ul_GDALState.cpp  ul_GDALState.h  ul_GdalWrapper.cpp  ul_GdalWrapper.h  ul_ImageLoaderGDAL.cpp  ul_ImageLoaderGDAL.h  ul_ImageSaverGDAL.cpp  ul_ImageSaverGDAL.h  (+2 more)
src/impl/ultra/io/inc/: ul_File.h  ul_Odl.h
src/impl/ultra/io/src/: CMakeLists.txt  ul_File.cpp  ul_Odl.cpp
src/impl/ultra/plot/inc/: ul_DrawingTools.h
src/impl/ultra/plot/src/: CMakeLists.txt  ul_DrawingTools.cpp
src/impl/ultra/projection/inc/: ul_Proj4Projection.h  ul_ProjectionEnum.h
src/impl/ultra/projection/src/: CMakeLists.txt  ul_Proj4Projection.cpp  ul_ProjectionEnum.cpp
src/impl/ultra/util/: CMakeLists.txt
src/impl/ultra/util/inc/: ul_Exception.h  ul_Logger.h  ul_Runnable.h  ul_UltraThread.h  ul_UltraThreadFixedPool.h  ul_UltraThreadPool.h  ul_Utility.h
src/impl/ultra/util/src/: CMakeLists.txt  ul_Exception.cpp  ul_Logger.cpp  ul_Utility.cpp
(+40 files in other folders)
